# cpy

./: .clangd  .gitconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  CONTRIBUTORS.md  FUNDING.yml  LICENSE  README  README.md  __test__.c  compile-run  compile.py  compile.sh  cpy-colors.h  cpy-core.c  cpy-core.h  cpy-file.c  cpy-list.c  cpy-list.h  cpy-print.c  cpy-print.h  cpy-string.c  cpy.c  cpy.h  example.c  funding.yml  install-git-hooks  lib-cpython-builtins.h  lib-cpythonbuiltins.h  libavoidrepetition.h  libavoidrepitition.c  libavoidrepitition.h  libcpyb.h  license.md  makefile  print.h  readme.md  sider.yml  str-put.c  (+1 more)
example/: example.c  example.vcxproj
include/: cpy.h  cpy_core.h  cpy_file.h  cpy_list.h  cpy_print.h  cpy_string.h  cpy_types.h
include/cpy/: color.h  core.h  cpy.h  print.h  string.h
module/input/: linenoise.c
module/request/: request.c  request.h
module/request/cpy/: cpy.c  cpy.h
src/: core.c  file.c  list.c  print.c  string.c
test/: .__main__.c.swp  __main__.c  __template__.h  test_assert.h  test_max.h  test_min.h  test_substr.h  test_sum.h
